--- a/front/templates/detail.html
+++ b/front/templates/detail.html
@@ -15,7 +15,7 @@
             <h2>关于我</h2>
             <ul>
                 <i><img src="{% static 'images/1.jpg' %}"></i>
-                <p><b>余</b>{{ intr }}</p>
+                <p><b>{{ myname }}</b>,{{ myintr }}</p>
             </ul>
         </div>
 
