--- a/front/templates/caregory.html
+++ b/front/templates/caregory.html
@@ -19,7 +19,7 @@
             <h2>关于我</h2>
             <ul>
                 <i><img src="images/4.jpg"></i>
-                <p><b>杨青</b>，一个80后草根女站长！09年入行。一直潜心研究web前端技术，一边工作一边积累经验，分享一些个人博客模板，以及SEO优化等心得。</p>
+                <p><b>{{ myname }}</b>,{{ myintr }}</p>
             </ul>
         </div>
 
