--- a/front/templates/about.html
+++ b/front/templates/about.html
@@ -34,7 +34,7 @@
     </aside>
     <main class="r_box">
         <div class="about">
-            <p class="intr" style="margin-bottom: 20px">{{ intr }}</p>
+            <p class="intr" style="margin-bottom: 20px">{{ myintr }}</p>
             <p class="info">{{ info }}</p>
         </div>
     </main>
