--- a/front/templates/login.html
+++ b/front/templates/login.html
@@ -24,6 +24,7 @@
 <div class="wel" id="from">
     <div class="box-2 le-1">
         <form action="" method="post">
+{#            {% csrf_token %}#}
             <div class="flrg" id="signin-group">
                     <h3>登录</h3>
                 <div class="a">
@@ -56,6 +57,7 @@
     </div>
     <div class="box-2 le-2">
         <form action="" method="post">
+{#            {% csrf_token %}#}
             <div class="flrg-1" id="signup-group">
                 <h3>注册</h3>
                 <div class="a">
